# drone-q-learning

./: .claudeignore  .env-example  .gitignore  README.md  pyproject.toml
config/: env.json  rl.json
docs/: CLAUDE.md  PLAN.md  PRD.md  TODO.md
src/: main.py
src/core/: __init__.py  _grid_helpers.py  cell_type.py  config_loader.py  episode_stats.py  grid_world.py  q_agent.py  version.py
src/gui/: __init__.py  app.py  control_panel.py  dashboard.py  drone_sprite.py  graph_panel.py  grid_canvas.py  grid_editor.py  hyperparam_panel.py  status_bar.py  theme.py  tooltip.py
src/sdk/: __init__.py  drone_sim_sdk.py  grid_sdk.py  persistence.py  training_loop.py
tests/core/: test_cell_type.py  test_config_loader.py  test_episode_stats.py  test_grid_world.py  test_q_agent.py  test_version.py
tests/sdk/: test_drone_sim_sdk.py  test_persistence.py  test_training_loop.py
